--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "mindmap",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "electron-is-dev": "^1.2.0",
     "electron-prompt": "^1.6.0",
+    "jquery": "^3.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
